[gd_scene load_steps=3 format=3 uid="uid://maingame001"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://player001" path="res://scenes/Player.tscn" id="2"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="SkyLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/SkyLayer"]
offset_right = 2048.0
offset_bottom = 600.0
color = Color(0.5, 0.7, 1, 1)

[node name="CloudsLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.3, 0)
motion_mirroring = Vector2(1024, 0)

[node name="Cloud1" type="ColorRect" parent="ParallaxBackground/CloudsLayer"]
offset_left = 100.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 120.0
color = Color(1, 1, 1, 0.7)

[node name="Cloud2" type="ColorRect" parent="ParallaxBackground/CloudsLayer"]
offset_left = 300.0
offset_top = 150.0
offset_right = 420.0
offset_bottom = 190.0
color = Color(1, 1, 1, 0.7)

[node name="Cloud3" type="ColorRect" parent="ParallaxBackground/CloudsLayer"]
offset_left = 600.0
offset_top = 100.0
offset_right = 700.0
offset_bottom = 140.0
color = Color(1, 1, 1, 0.7)

[node name="Cloud4" type="ColorRect" parent="ParallaxBackground/CloudsLayer"]
offset_left = 850.0
offset_top = 180.0
offset_right = 950.0
offset_bottom = 220.0
color = Color(1, 1, 1, 0.7)

[node name="HillsLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.6, 0)
motion_mirroring = Vector2(1024, 0)

[node name="Hills" type="Polygon2D" parent="ParallaxBackground/HillsLayer"]
color = Color(0.2, 0.6, 0.2, 1)
polygon = PackedVector2Array(0, 500, 100, 480, 200, 490, 300, 460, 400, 480, 500, 450, 600, 470, 700, 440, 800, 460, 900, 480, 1024, 490, 1024, 600, 0, 600)

[node name="Player" parent="." instance=ExtResource("2")]
position = Vector2(150, 300)

[node name="UI" type="CanvasLayer" parent="."]

[node name="TimerLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 28
text = "Time: 60.0"

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 824.0
offset_top = 20.0
offset_right = 1004.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 28
text = "Score: 0"
horizontal_alignment = 2

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true